fix ui and CWA configurations

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2002,9 +2002,9 @@ footer .wrap .footer-menu ul span .submenu{
 .Bc-Coquitlam .refinance-text p {
   font-size: 40px;
 }
-.faq_section {
-  background-image: url("") !important;
-}
+// .faq_section {
+//   background-image: url("") !important;
+// }
 }
 
 @media all and (max-width: 441px) {
