--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1434,11 +1434,15 @@ textarea#comment {
     .application-slide {
       span{
         font-size: 2rem;
+        padding-left: 10px;
+        padding-right: 10px;
       }
       p {
-        width: 90%;
+        width: 100%;
         margin: auto;
         line-height: 30px;
+        padding-left: 40px;
+        padding-right: 40px;
       }
     }
     .react-multiple-carousel__arrow {
