--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -397,7 +397,16 @@ body {
     width: 80%;
   }
 }
-
+.gallery_img{
+  width: 100%;
+  height: 252px;
+  position: relative;
+}
+.gallery_img_mid{
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
 // footer style
 
 footer {
@@ -2036,6 +2045,9 @@ footer .wrap .footer-menu ul span .submenu{
   .gallery_img{
     height: 66px;
     width: 112px;
+  }
+  .gallery_img_mid{
+    height: 150px;
   }
   .cta_section .cta_first{
     height: 50vh
