--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -218,8 +218,9 @@ body {
 }
 .home-slider {
   .carousel-indicators {
-    position: absolute;
-    right: inherit;
+    // position: absolute;
+    // right: inherit;
+    align-items: center;
     bottom: 15%;
     left: 0;
   }
@@ -244,6 +245,7 @@ body {
 }
 
 .wehelp_section {
+  padding-top: 50px;
   padding: 80px 0;
   position: relative;
   &:before {
