--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -136,7 +136,7 @@ body {
             padding: 5px;
             display: block;
             cursor: pointer;
-            margin: 0;
+            // margin: 0;
 
             border-bottom: 2px solid $color-secondary;
             &:hover {
@@ -158,10 +158,10 @@ body {
     // font-family: 'AvenirBook';
     cursor:pointer;
     text-transform: uppercase;
-    margin-left: 10px;
+    margin-left: 3px;
     text-decoration: none;
     color: $color-primary;
-    font-size: 13px;
+    font-size: 12px;
     border-bottom: 2px solid transparent;
     padding: 4px 0;
     position: relative;
