--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -158,10 +158,10 @@ body {
     // font-family: 'AvenirBook';
     cursor:pointer;
     text-transform: uppercase;
-    margin-left: 3px;
+    margin-left: 10px;
     text-decoration: none;
     color: $color-primary;
-    font-size: 12px;
+    font-size: 14px;
     border-bottom: 2px solid transparent;
     padding: 4px 0;
     position: relative;
@@ -1688,6 +1688,15 @@ p.testimonials-name {
 }
 .location-tab-title{
   font-size: 15px;
+}
+@media all and (max-width: 1400px) {
+  .navbar-nav {
+    span.link {
+      margin-left: 3px;
+      font-size: 12px;
+      
+    }
+  }  
 }
 @media all and (max-width: 912px) {
   .navbar-nav ul li ul.submenu{
