--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1506,6 +1506,19 @@
   .service-description p{
     font-size: 18px;
   }
+  .service-top-section{
+    display: flex;
+    align-items: center;
+    justify-content:center ;
+    .service-top-card{
+      width: 50%;
+      height: 280px;
+      width: 100%;
+      border: none;
+      padding: 20px 40px 40px;
+      box-shadow: -1px -3px 12px -5px #000;
+    }
+  }
   .service-section{
     margin-top: 50px;
     display: flex;
@@ -1514,12 +1527,12 @@
     gap: 20px;
     .service-card{
         width: 50%;
-        height: 250px;
+        height: 280px;
         border: none;
         padding: 20px;
-        border-radius: 10px;
         box-shadow: -1px -3px 12px -5px #000;
         &:hover{
+          height: 300px;
           transform: translateY(-10px);
         }
       }
@@ -2296,13 +2309,19 @@ margin-left: 20px;
   .service-title{
     font-size: 30px;
   }
+  .service-top-section{
+    .service-top-card{
+      width: 100%;
+      height: 320px;
+    }
+  }
   .service-section{
     flex-direction: column;
     .service-card{
       width: 100%;
-      height: 300px;
+      height: 340px;
       overflow: hidden;
-      .service-card-text{
+      .service-card-text p{
         font-size: 18px;
       }
       .service-card-image img{
