--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -268,10 +268,13 @@
       opacity: 0.5;
     }
   }
+  .wehelp_desc{
+    padding-top: 30px;
+    display: flex;
+    justify-content: center;
+  }
   .wehelp_section {
     padding-top: 50px;
-    padding: 80px 0;
-    position: relative;
     &:before {
       content: "";
 
@@ -613,7 +616,7 @@
     flex-direction: column;
     margin: 30px 0;
     .cta_text {
-      margin-bottom: 40px;
+      // margin-bottom: 40px;
       text-align: center;
       position: relative;
       top: -120px;
@@ -1588,7 +1591,8 @@
       display: flex;
       flex-direction: column;
       border-bottom: none;
-      width: 50%;
+      width: 45%;
+      margin-left: 10px;
       .location-tab-title{
         font-size: 24px;
       }
@@ -1603,6 +1607,7 @@
         cursor: pointer;
         color: white;
         background-color: $color-black;
+        box-shadow: -1px -3px 8px -5px #000;
         &:hover {
           border-color: transparent;
         }
