--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -275,6 +275,8 @@
   .wehelp_section {
     padding-top: 50px;
     .row {
+      display: flex;
+      align-items: center;
       .col-lg-6 div{
         display: flex;
         flex-direction: column;
@@ -527,7 +529,7 @@
           margin: 0;
           padding: 0;
           list-style: none;
-          display: block;
+          display: flex;
           justify-content: center;
           align-items: center;
           width: 100%;
@@ -635,12 +637,12 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 30px 0;
+    // margin: 30px 0;
     .cta_text {
       // margin-bottom: 40px;
       text-align: center;
       position: relative;
-      top: -120px;
+      top: -60px;
       .ctaBtn {
         background: $color-black;
         border-radius: unset;
