--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -662,24 +662,30 @@
     }
   }
   .service-bottom-section{
-    margin-top: 30px;
+    margin-top: 100px;
   }
   .service-text-after{
     z-index: 1;
     position: relative;
-    margin-bottom: -300px;
+    margin-bottom: -280px;
     font-size: 70px;
-    margin-left: 150px;
-    width: 30%;
+    margin-left: 25px;
+    text-align: center;
+    width: 40%;
     span{
       color:#f0b254;
     }
   }
    .service-image-after{
+    position: relative;
     z-index: 0;
     height: 500px;
-    width: 800px;
+    width: 950px;
     margin-left: 350px;
+    margin-bottom: 50px;
+    margin-top:50px;
+    object-fit: cover;
+    clip-path: inset(0 0 0 0);
     // position: relative;
   }
 
@@ -2391,17 +2397,22 @@ margin-left: 20px;
     .service-description p{
       font-size: 14px;
     }
+    .service-bottom-section{
+      margin-top: -20px;
+      margin-bottom: -30px;
+    }
     .service-text-after{
+      text-align: start;
       margin-left:0 ;
       width: 100%;
       z-index: 1;
       font-size: 24px;
     }
     .service-image-after{
-      margin-top: 250px;
+      margin-top: 280px;
       z-index: 0;
       height: 200px;
-      width: 300px;
+      width: 100%;
       margin-left: 0;
       // position: relative;
     }
