--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -13,7 +13,6 @@
 
 
 
-
 .carouselcaption {
     top: 0;
     bottom: 0;
@@ -44,6 +43,8 @@
             margin-top: 10px;
         }
     }
+    
+    
     .bannerBtn{
         background: transparent;
         border: 2px solid $color-white;
@@ -52,6 +53,7 @@
         font-size: 18px;
         border-radius: 0;
         padding-top: 11px;
+        margin-right: 20px;
         span{
             color: $color-secondary;
             font-family: 'AvenirBlack';
@@ -84,6 +86,7 @@
         
         .bannerBtn{
             font-size: 18px;
+            margin-top: 20px;
         }
     }
 }
