--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1017,6 +1017,10 @@ q.review-content {
   font-weight: 400;
   font-family: "AvenirBook";
 }
+.top-nav a{
+  text-decoration: none;
+  color: $color-secondary;
+}
 
 .partnerLogo {
   margin: 100px 0 100px 0;
