--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -276,6 +276,7 @@ body {
     opacity: 1;
     border: 5px solid transparent;
     outline: 1px solid $color-white;
+    display: none;
   }
   .carousel-indicators .active {
     width: 12px;
@@ -661,13 +662,18 @@ footer {
     .ctaBtn {
       background: $color-black;
       border-radius: unset;
-      padding: 5px 30px;
+      padding: 10px 30px;
       font-size: 20px;
+      font-weight: 600;
+      text-transform: uppercase;
       border: none;
       cursor: pointer;
       &:hover{
         background: $color-secondary;
         color: $color-black;
+        border: 2px solid $color-black;
+        font-weight: 600;
+        text-transform: uppercase;
       }
     }
     p {
@@ -1551,6 +1557,67 @@ textarea#comment {
         img {
           width: 100% !important;
         }
+      }
+    }
+  }
+}
+.apply-now{
+  .apply-step {
+    margin-bottom: 80px;
+    div.col-md-4 {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .apply {
+      background: $color-primary;
+      padding: 20px;
+      text-align: center;
+      color: $color-white;
+      position: relative;
+      z-index: auto;
+      width: 100%;
+      span {
+        font-size: 2rem;
+      }
+      .desc{
+        color: $color-white;
+        font-size: 14px;
+        font-weight: 200;
+        font-family: "AvenirBook";
+      }
+      .apply-border {
+        border: 1px solid $color-secondary;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: rotate(-10deg);
+        z-index: -999;
+      }
+      p {
+        font-size: 2rem;
+        line-height: 25px;
+      }
+    }
+    .approved {
+      border: 1px solid $color-secondary;
+      padding: 20px;
+      text-align: center;
+      span {
+        font-size: 2rem;
+      }
+      .title{
+        font-size: 2rem;
+        margin-top: 5px;
+      }
+      p {
+        color: $color-primary;
+        font-size: 14px;
+        font-weight: 200;
+        line-height: 25px;
+        font-family: "AvenirBook";
       }
     }
   }
