--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,10 +49,11 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-left {
   }
 }
 .tab-btn {
-  margin: 40px 0px 0px 40px;
+  // margin: 40px 0px 0px 40px;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 40px;
   .HeadBtn {
     width: 200px;
     padding-top: .5rem;
@@ -308,6 +309,15 @@ body {
     opacity: 0.5;
   }
 }
+.footer-partner-logo{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  padding: 5px;
+  gap: 30px;
+}
 .wehelp_desc {
   display: flex;
   justify-content: center;
@@ -334,6 +344,7 @@ body {
     align-items: center;
   }
   .wehelp_text {
+    margin-top: 30px;
     .SplitBtn {
       background: transparent;
       border: 2px solid $color-black;
@@ -798,6 +809,11 @@ footer {
     }
   }
 }
+.mortgagecalculator-content{
+  div{
+    height: 1765px;
+  }
+}
 .review {
   .react-multiple-carousel__arrow {
     background-color: transparent;
@@ -849,7 +865,7 @@ q.review-content {
 }
 .review-box {
   margin-left: 25px;
-  height: 220px !important;
+  height: 230px !important;
   width: 380px !important;
   box-shadow: -1px -3px 4px -5px #000;
 }
@@ -1552,11 +1568,14 @@ textarea#comment {
         }
       }
     }
-    .service-image {
-      span {
-        width: 100% !important;
-        img {
-          width: 100% !important;
+    .service-row{
+      .service-texts{
+        .service-image{
+          img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
         }
       }
     }
@@ -2550,7 +2569,31 @@ p.testimonials-name {
 }
 
 @media all and (max-width: 441px) {
+  .footer-partner-logo{
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  img{
+    width: 50px;
+    height: 50px;
+  }
+  }
+  .hero-title-col {
+  .hero-title {
+    font-size: 50px;
+    font-family: "AvenirBook";
 
+    span {
+      font-family: "AvenirBlack";
+      color: $color-secondary;
+      display: block;
+      font-weight: 900;
+    }
+  }
+}
   .service-description p {
     font-size: 14px;
   }
