--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1894,12 +1894,12 @@ textarea#comment {
     align-items: center;
     color: $color-primary;
     h2 {
-      font-size: 20px;
+      font-size: .5 rem;
+      line-height: 1.2;
+      font-weight: 500;
       margin-bottom: 20px;
       span {
-        font-family: "AvenirBlack";
         color: $color-primary;
-        font-weight: 900;
       }
     }
   }
@@ -1943,9 +1943,9 @@ textarea#comment {
     margin-bottom: 80px;
     h2 {
       color: $color-primary;
-      font-size: 20px;
-      font-weight: 600;
-      font-family: "AvenirBlack";
+      font-size: .5 rem;
+      font-weight: 500;
+      line-height: 1.2;
       margin-bottom: 10px;
     }
     p {
