--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2670,6 +2670,7 @@ p.testimonials-name {
     .split_image {
       height: 60vh;
       margin-bottom: 30px;
+      object-fit: cover;
     }
   }
   .cta_section .cta_first {
