--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -513,7 +513,9 @@ body {
     width: 80%;
     position: relative;
     height: 80vh;
-    object-fit: cover;
+    img{
+      object-fit: cover;
+    }
   }
 }
 .gallery_img {
@@ -2572,6 +2574,11 @@ p.testimonials-name {
 }
 
 @media all and (max-width: 441px) {
+  .coquitlam-grid {
+    .col-md-5{
+      margin-top: 20px;
+    }
+  }
   .footer-partner-logo{
     display: flex;
   flex-wrap: wrap;
