--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -149,6 +149,13 @@ body {
         display: none;
         width: 240px;
         li {
+
+          position: relative;
+          &:hover {
+            ul.submenu-child {
+              display: block;
+            }
+          }
           span.sublink {
             padding: 5px;
             display: block;
@@ -160,13 +167,37 @@ body {
               background: $color-secondary;
               color: $color-white;
             }
-            &:before {
-              display: none;
-            }
-            &:after {
-              display: none;
-            }
           }
+          ul.submenu-child{
+            display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 80%;
+      z-index: 99;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      background: #fff;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+      display: none;
+      width: 240px;
+      li {
+        span.sublink {
+          padding: 5px;
+          display: block;
+          cursor: pointer;
+          // margin: 0;
+
+          border-bottom: 2px solid $color-secondary;
+          &:hover {
+            background: $color-secondary;
+            color: $color-white;
+          }
+          }
+          }
+        }
         }
       }
       .HeadBtn {
@@ -600,6 +631,31 @@ footer {
               span {
                 float: none;
               }
+              &:hover {
+                ul.submenu-child {
+                  display: block;
+                }
+              }
+              ul.submenu-child{
+                display: none;
+            position: absolute;
+            // top: 23px;
+            // left: 0;
+            background-color: #12143a;
+            color: $color-secondary;
+            width: 190px;
+            // z-index: 99;
+            margin-left: -5px;
+            margin-top: 5px;
+          li {
+            float: none;
+              padding: 5px;
+              cursor: pointer;
+              span {
+                float: none;
+              }
+              }
+            }
             }
           }
         }
