--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -149,7 +149,6 @@ body {
         display: none;
         width: 240px;
         li {
-
           position: relative;
           &:hover {
             ul.submenu-child {
@@ -169,14 +168,14 @@ body {
             }
           }
           ul.submenu-child{
-            display: flex;
+      display: flex;
       flex-direction: column;
       position: absolute;
       top: 80%;
       z-index: 99;
       width: 100%;
-      margin: 0;
-      padding: 0;
+      margin-left: 30px;
+      margin-top: 10px;
       background: #fff;
       text-align: center;
       justify-content: center;
@@ -231,26 +230,6 @@ body {
     font-weight: 800;
     display: block;
     text-align: center;
-    // &:hover {
-    //   // font-family: 'AvenirBlack';
-    //   border-bottom: 2px solid $color-secondary;
-    //   color: $color-primary;
-    //   &:before {
-    //     border-top: 2px solid $color-secondary;
-    //     border-right: 2px solid $color-secondary;
-    //     width: 30px;
-    //     height: 30px;
-    //     content: " ";
-    //     display: block;
-    //     background-color: transparent;
-    //     transform: rotate(-44deg) skew(10deg, 10deg);
-    //     position: absolute;
-    //     top: -14px;
-    //     left: 0;
-    //     right: 0;
-    //     margin: auto;
-    //   }
-    // }
   }
 }
 
