added bottom partner logo

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -320,13 +320,13 @@ body {
   }
 }
 .footer-partner-logo{
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background-color: #fff;
   padding: 5px;
-  gap: 30px;
+  gap: 50px;
 }
 .wehelp_desc {
   display: flex;
