--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -168,6 +168,7 @@ body {
             }
           }
           ul.submenu-child{
+      padding-left: 0px !important;
       display: flex;
       flex-direction: column;
       position: absolute;
