added new homepage

--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -12,7 +12,14 @@
 }
 
 
-
+.description{
+    p{
+        span{
+            color: #ffff;
+            font-weight: 100;
+        }
+    }
+}
 .carouselcaption {
     top: 0;
     bottom: 0;
