--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,34 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-left {
   width: 19px;
   display: block;
 }
+.link_banner{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .apply-button{
+    background: transparent;
+    border: 2px solid $color-black;
+    border-radius: 8px;
+    color: $color-black;
+    text-transform: uppercase;
+    font-family: 'AvenirBook';
+    font-size: 16px;
+    padding-top: 11px;
+    margin-right: 20px;
+    span{
+        color: $color-secondary;
+        font-family: 'AvenirBlack';
+    }
+    &:hover{
+        background: $color-black;
+        border: 2px solid $color-secondary;
+        color: $color-white;
+        span{
+            color: $color-white;
+        }
+    }
+  }
+}
 .hero-title-col {
   position: relative;
   &:after {
