added prince and mapple page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2076,6 +2076,7 @@ textarea#comment {
   .coquitlam-grid {
     display: flex;
     align-items: center;
+    justify-content: center;
     color: $color-primary;
     h2 {
       font-size: .5 rem;
