--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -143,7 +143,7 @@ body {
   // }
 }
 .advisor-title {
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 600;
   font-family: "AvenirBook";
   color: $color-secondary;
@@ -468,6 +468,29 @@ body {
     // margin-top: 120px;
   }
 }
+.service-content h3 {
+  font-size: 22px;
+}
+.coquitlam-grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: $color-primary;
+  .col-md-5 {
+    img{
+    height: 80vh;
+    }
+  }
+  h3 {
+    font-size: .5 rem;
+    line-height: 1.2;
+    font-weight: 500;
+    margin-bottom: 20px;
+    span {
+      color: $color-primary;
+    }
+  }
+}
 
 .meeting_section div {
   .container {
@@ -543,15 +566,15 @@ body {
   }
   .flex-row-reverse {
     .split_image {
-      width: 80%;
+      width: 90%;
       float: right;
       object-fit: cover;
     }
   }
   .split_image {
-    width: 80%;
-    position: relative;
+    width: 90%;
     height: 80vh;
+    position: relative;
     img{
       object-fit: cover;
     }
@@ -1032,7 +1055,8 @@ q.review-content {
         height: 50px;
         padding: 1px;
         font-weight: 700;
-        color:#f0b254
+        color:#f0b254;
+        line-height: 2.5rem;
       }
     }
     .card-body{
@@ -1658,7 +1682,7 @@ textarea#comment {
         }
         h3 {
           color: $color-white;
-          font-size: 30px;
+          font-size: 22px;
         }
         p {
           color: $color-white;
@@ -2519,7 +2543,7 @@ p.testimonials-name {
   .wehelp_section .wehelp_image,
   .split_section .split_image,
   .split_section .flex-row-reverse .split_image {
-    width: 100%;
+    // width: 100%;
     text-align: center;
     object-fit: cover;
   }
@@ -2861,9 +2885,10 @@ p.testimonials-name {
   }
   .split_section {
     .split_image {
-      height: 60vh;
+      height: 80vh;
       margin-bottom: 30px;
       object-fit: cover;
+      width:90%;
     }
   }
   .cta_section .cta_first {
