--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -13,6 +13,11 @@
 
 
 .description{
+    h3{
+        span{
+            margin-left: 20px;
+        }
+    }
     p{
         span{
             color: #ffff;
