--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,31 +14,31 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-left {
   width: 19px;
   display: block;
 }
-.link-banner{
+.link-banner {
   display: flex;
   align-items: center;
   justify-content: center;
-  .apply-button{
+  .apply-button {
     background: transparent;
     border: 2px solid $color-black;
     border-radius: 8px;
     color: $color-black;
     text-transform: uppercase;
-    font-family: 'AvenirBook';
+    font-family: "AvenirBook";
     font-size: 16px;
     padding-top: 11px;
     margin-right: 20px;
-    span{
-        color: $color-secondary;
-        font-family: 'AvenirBlack';
+    span {
+      color: $color-secondary;
+      font-family: "AvenirBlack";
     }
-    &:hover{
-        background: $color-black;
-        border: 2px solid $color-secondary;
+    &:hover {
+      background: $color-black;
+      border: 2px solid $color-secondary;
+      color: $color-white;
+      span {
         color: $color-white;
-        span{
-            color: $color-white;
-        }
+      }
     }
   }
 }
@@ -84,8 +84,8 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-left {
   margin-top: 40px;
   .HeadBtn {
     width: 200px;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     color: $color-secondary;
     font-family: "AvenirBlack";
     background: transparent;
@@ -196,38 +196,38 @@ body {
               color: $color-white;
             }
           }
-          ul.submenu-child{
-      padding-left: 0px !important;
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      top: 80%;
-      z-index: 99;
-      width: 100%;
-      margin-left: 30px;
-      margin-top: 10px;
-      background: #fff;
-      text-align: center;
-      justify-content: center;
-      align-items: center;
-      display: none;
-      width: 240px;
-      li {
-        span.sublink {
-          padding: 5px;
-          display: block;
-          cursor: pointer;
-          text-transform: uppercase;
-          // margin: 0;
+          ul.submenu-child {
+            padding-left: 0px !important;
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 80%;
+            z-index: 99;
+            width: 100%;
+            margin-left: 30px;
+            margin-top: 10px;
+            background: #fff;
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+            display: none;
+            width: 240px;
+            li {
+              span.sublink {
+                padding: 5px;
+                display: block;
+                cursor: pointer;
+                text-transform: uppercase;
+                // margin: 0;
 
-          border-bottom: 2px solid $color-secondary;
-          &:hover {
-            background: $color-secondary;
-            color: $color-white;
+                border-bottom: 2px solid $color-secondary;
+                &:hover {
+                  background: $color-secondary;
+                  color: $color-white;
+                }
+              }
+            }
           }
-          }
-          }
-        }
         }
       }
       .HeadBtn {
@@ -350,7 +350,7 @@ body {
     opacity: 0.5;
   }
 }
-.footer-partner-logo{
+.footer-partner-logo {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -477,12 +477,12 @@ body {
   justify-content: center;
   color: $color-primary;
   .col-md-5 {
-    img{
-    height: 60vh;
+    img {
+      height: 60vh;
     }
   }
   h3 {
-    font-size: .5 rem;
+    font-size: 0.5 rem;
     line-height: 1.2;
     font-weight: 500;
     margin-bottom: 20px;
@@ -575,7 +575,7 @@ body {
     width: 90%;
     height: 80vh;
     position: relative;
-    img{
+    img {
       object-fit: cover;
     }
   }
@@ -590,7 +590,7 @@ body {
   height: 100%;
   position: relative;
 }
-.brand-mail span{
+.brand-mail span {
   color: $color-secondary;
 }
 // footer style
@@ -670,27 +670,27 @@ footer {
                   display: block;
                 }
               }
-              ul.submenu-child{
+              ul.submenu-child {
                 display: none;
-            position: absolute;
-            padding-left: 0px !important;
-            // top: 23px;
-            // left: 0;
-            background-color: #12143a;
-            color: $color-secondary;
-            width: 190px;
-            // z-index: 99;
-            margin-left: -5px;
-            margin-top: 5px;
-          li {
-            float: none;
-              padding: 5px;
-              cursor: pointer;
-              span {
-                float: none;
+                position: absolute;
+                padding-left: 0px !important;
+                // top: 23px;
+                // left: 0;
+                background-color: #12143a;
+                color: $color-secondary;
+                width: 190px;
+                // z-index: 99;
+                margin-left: -5px;
+                margin-top: 5px;
+                li {
+                  float: none;
+                  padding: 5px;
+                  cursor: pointer;
+                  span {
+                    float: none;
+                  }
+                }
               }
-              }
-            }
             }
           }
         }
@@ -775,7 +775,7 @@ footer {
       text-transform: uppercase;
       border: none;
       cursor: pointer;
-      &:hover{
+      &:hover {
         background: $color-secondary;
         color: $color-black;
         border: 2px solid $color-black;
@@ -904,8 +904,8 @@ footer {
     }
   }
 }
-.mortgagecalculator-content{
-  div{
+.mortgagecalculator-content {
+  div {
     height: 1765px;
   }
 }
@@ -1030,23 +1030,24 @@ q.review-content {
     }
   }
 }
-.homebuyer-items{
+.homebuyer-items {
   gap: 10px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  .card{
+
+  .card {
     padding-top: 15px;
     width: 300px;
     height: 450px;
-    overflow-y: hidden ;
-    .card-index{
+    overflow-y: hidden;
+    .card-index {
       display: flex;
       align-items: center;
       justify-content: center;
-      
-      p{
+
+      p {
         font-size: 2rem;
         border: 1px solid $color-black;
         background-color: #12143a;
@@ -1055,17 +1056,60 @@ q.review-content {
         height: 50px;
         padding: 1px;
         font-weight: 700;
-        color:#f0b254;
+        color: #f0b254;
         line-height: 2.5rem;
       }
     }
-    .card-body{
-      .card-title{
+    .card-body {
+      .card-title {
         font-size: 24px;
         font-weight: 700;
       }
-      p{
-        span{
+      p {
+        span {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+.homebuyer-items-bc {
+  gap: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  .card {
+    padding-top: 15px;
+    width: 300px;
+    height: 500px;
+    overflow-y: hidden;
+    .card-index {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      p {
+        font-size: 2rem;
+        border: 1px solid $color-black;
+        background-color: #12143a;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        padding: 1px;
+        font-weight: 700;
+        color: #f0b254;
+        line-height: 2.5rem;
+      }
+    }
+    .card-body {
+      .card-title {
+        font-size: 24px;
+        font-weight: 700;
+      }
+      p {
+        span {
           font-size: 14px;
         }
       }
@@ -1190,7 +1234,7 @@ q.review-content {
   font-weight: 400;
   font-family: "AvenirBook";
 }
-.top-nav a{
+.top-nav a {
   text-decoration: none;
   color: $color-secondary;
 }
@@ -1215,15 +1259,15 @@ q.review-content {
 }
 
 // contact us page
-.contact-section{
-  .contact-row{
-    .col-md-6 select{
+.contact-section {
+  .contact-row {
+    .col-md-6 select {
       background-color: #fff;
     }
-    .col-md-4 select{
+    .col-md-4 select {
       background-color: #fff;
     }
-    .col-md-12 textarea{
+    .col-md-12 textarea {
       background-color: #fff;
     }
   }
@@ -1704,10 +1748,10 @@ textarea#comment {
         }
       }
     }
-    .service-row{
-      .service-texts{
-        .service-image{
-          img{
+    .service-row {
+      .service-texts {
+        .service-image {
+          img {
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -1717,7 +1761,7 @@ textarea#comment {
     }
   }
 }
-.apply-now{
+.apply-now {
   .apply-step {
     margin-bottom: 80px;
     div.col-md-4 {
@@ -1736,7 +1780,7 @@ textarea#comment {
       span {
         font-size: 2rem;
       }
-      .desc{
+      .desc {
         color: $color-white;
         font-size: 14px;
         font-weight: 200;
@@ -1764,7 +1808,7 @@ textarea#comment {
       span {
         font-size: 2rem;
       }
-      .title{
+      .title {
         font-size: 2rem;
         margin-top: 5px;
       }
@@ -1778,7 +1822,7 @@ textarea#comment {
     }
   }
 }
-.apply-now-home{
+.apply-now-home {
   .apply-step {
     margin-bottom: 80px;
     div.col-md-4 {
@@ -1797,15 +1841,15 @@ textarea#comment {
       span {
         font-size: 2rem;
       }
-      p.title{
+      p.title {
         font-size: 2rem;
       }
-      div.desc{
-        span{
+      div.desc {
+        span {
           color: $color-white;
-        font-size: 14px;
-        font-weight: 200;
-        font-family: "AvenirBook";
+          font-size: 14px;
+          font-weight: 200;
+          font-family: "AvenirBook";
         }
       }
       .apply-border {
@@ -1830,15 +1874,15 @@ textarea#comment {
       span {
         font-size: 2rem;
       }
-      p.title{
+      p.title {
         font-size: 2rem;
       }
-      div.desc{
-        span{
-        color: $color-primary;
-        font-size: 14px;
-        font-weight: 200;
-        font-family: "AvenirBook";
+      div.desc {
+        span {
+          color: $color-primary;
+          font-size: 14px;
+          font-weight: 200;
+          font-family: "AvenirBook";
         }
       }
     }
@@ -2003,7 +2047,7 @@ textarea#comment {
     padding: 10px;
   }
 }
-.tab-head{
+.tab-head {
   margin-top: 80px;
 }
 .renovation-tab-row {
@@ -2034,7 +2078,7 @@ textarea#comment {
       &:hover {
         border-color: transparent;
       }
-      p{
+      p {
         margin: 0;
       }
       .location-tab-title {
@@ -2103,7 +2147,7 @@ textarea#comment {
     justify-content: center;
     color: $color-primary;
     h2 {
-      font-size: .5 rem;
+      font-size: 0.5 rem;
       line-height: 1.2;
       font-weight: 500;
       margin-bottom: 20px;
@@ -2152,7 +2196,7 @@ textarea#comment {
     margin-bottom: 80px;
     h2 {
       color: $color-primary;
-      font-size: .5 rem;
+      font-size: 0.5 rem;
       font-weight: 500;
       line-height: 1.2;
       margin-bottom: 10px;
@@ -2599,7 +2643,7 @@ p.testimonials-name {
   .tab-head h2 {
     font-size: 30px;
   }
-  .top-nav{
+  .top-nav {
     letter-spacing: 1px;
   }
   .review-box {
@@ -2780,34 +2824,34 @@ p.testimonials-name {
 
 @media all and (max-width: 441px) {
   .coquitlam-grid {
-    .col-md-5{
+    .col-md-5 {
       margin-top: 20px;
     }
   }
-  .footer-partner-logo{
+  .footer-partner-logo {
     display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  img{
-    width: 50px;
-    height: 50px;
-  }
-  }
-  .hero-title-col {
-  .hero-title {
-    font-size: 50px;
-    font-family: "AvenirBook";
-
-    span {
-      font-family: "AvenirBlack";
-      color: $color-secondary;
-      display: block;
-      font-weight: 900;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    img {
+      width: 50px;
+      height: 50px;
     }
   }
-}
+  .hero-title-col {
+    .hero-title {
+      font-size: 50px;
+      font-family: "AvenirBook";
+
+      span {
+        font-family: "AvenirBlack";
+        color: $color-secondary;
+        display: block;
+        font-weight: 900;
+      }
+    }
+  }
   .service-description p {
     font-size: 14px;
   }
@@ -2888,7 +2932,7 @@ p.testimonials-name {
       height: 80vh;
       margin-bottom: 30px;
       object-fit: cover;
-      width:90%;
+      width: 90%;
     }
   }
   .cta_section .cta_first {
@@ -2900,15 +2944,15 @@ p.testimonials-name {
     margin-top: 100px;
   }
   .cta_section {
-    .cta_text{
-      p{
+    .cta_text {
+      p {
         margin-top: 30px;
         font-size: 30px;
       }
     }
-    .cta-details{
-      .container{
-          margin-top: 50px;
+    .cta-details {
+      .container {
+        margin-top: 50px;
       }
     }
   }
